tests/rascal/negative/type_errors/L1/20_expression_ES10_D4_3.ob
MODULE Test20;
VAR
  y: INTEGER;
  q: BOOLEAN;
  x: INTEGER;
  p: BOOLEAN;
  z: INTEGER;
  r: BOOLEAN;

BEGIN
               x := ((- ((- z) * (1223 DIV 1))) MOD (((1223 DIV y) * (200 DIV y)) - (- (y * 0))));
               z := ((((200 - 200) DIV (- 0)) + ((200 MOD y) * (z + 1223))) MOD (+ ((0 MOD 0) DIV (z MOD 200))));
               p := ((((x + x) MOD (200 MOD y)) <= (+ (+ x))) OR (((- 0) MOD (- 200)) > ((- 0) * (y + 200))));
               q := ((+ (+ (- z))) # (- ((2 MOD 1) MOD (+ 2))));
               p := (((+ (1 MOD x)) DIV (- (1 MOD z))) >= ((+ (200 - 2)) - (+ (x + z))));
               r := (~ (((+ x) + (0 MOD 0)) >= (- (+ 1))));
               y := ((((+ 0) + (+ 1223)) * (+ (z MOD x))) MOD (((+ 1223) + (1223 * z)) MOD ((200 - 1223) * (x + 1223))));
               y := (- (+ (- (200 * 1))));
               r := ((((z MOD 2) - (z DIV 1)) - (+ (2 * 1))) < (- ((+ y) - (0 + 0))));
  (* error *)  z := ((((+ q) * (z - z)) MOD ((2 + 2) MOD (0 - 1223))) - ((- (2 MOD 1)) * ((z * x) * (z MOD 0))))
END Test20.